--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- homepage
-
+a beuatiful human being explained it all!!! http://www.gajotres.net/document-onpageinit-vs-document-ready/
 will need to use <form> to stipulate number of players -->
 <html>
 	<head>
@@ -12,24 +12,55 @@ will need to use <form> to stipulate number of players -->
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+    <script>
+		$(document).on("pagecreate", '#main',function( event ) {
+			console.log("page create function");
+		});
+		$(document).on("pagecreate", '#page2', function( event ) {
+            console.log("only page two create function noted");
+        });
+
+    </script>
 </head>
 <body>
 
 <div id="main" data-role="page">
-
 	<div data-role="header">
-		<h1>Page Title</h1>
-	</div><!-- /header -->
-
+		<h1>Header of #main</h1>
+	</div>
 	<div data-role="content">
-		<p>Page content goes here.</p>
-		<a href="gridtimed.html" data-role="button">Go to Quiz</a>
-	</div><!-- /content -->
-
+		<a href="#page2" data-role="button">Go to Page 2</a>
+	</div>
 	<div data-role="footer">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
-</div><!-- /page -->
+		<h4>Footer of #main Page</h4>
+	</div>
+</div>
+
+<div id="page2" data-role="page" data-title="Multi-Page Template">
+	<div data-role="header">
+		<h1>Header of #page2</h1>
+	</div>
+	<div data-role="content">
+		<a href="#page3" data-role="button" data-theme="b">GoTo Page 3</a>
+	</div>
+	<div data-role="footer">
+		<h4>Footer of #page2</h4>
+		<a href="#" data-role="button" data-rel="back" data-theme="b">Go Back</a>
+	</div>
+</div>
+
+<div id="page3" data-role="page" data-title="Multi-Page Template">
+	<div data-role="header">
+		<h1>Header of #page3</h1>
+	</div>
+	<div data-role="content">
+		<!-- <a href="#" data-role="button" data-rel="back" data-theme="b">Go Back</a> -->
+	</div>
+	<div data-role="footer">
+		<h4>Footer of #page3</h4>
+		<a href="#" data-role="button" data-rel="back" data-theme="b">Go Back</a>
+	</div>
+</div>
 
 </body>
 </html>
