--- a/adtOO.html
+++ b/adtOO.html
@@ -120,6 +120,12 @@ console.log("goodbye");
     console.log(topicTally);
     var round1 = sortDesc(topicTally).slice(0,5);
     console.log(round1);
+    var first = thirtySeconds.chooseFive(round1);
+    console.log(first);
+    thirtySeconds.remove(first);
+    console.log(thirtySeconds.presentStatements([],first));
+    topicTally = thirtySeconds.count();
+    console.log(topicTally);
   // for (var c = 0; c < 5; c++) {
     // var topicTally = shuffle(count(thirtySeconds));
     // var round1 = sortDesc(topicTally).slice(0,5); // round1 is an array of topic indexes
